[web] fixed list rendering issue and spacing in markdown

--- a/web/src/components/ReportDetail.css
+++ b/web/src/components/ReportDetail.css
@@ -39,5 +39,5 @@ u {
 }
 
 .readme_text > * {
-  margin-bottom: .4rem;
+  margin-bottom: 1rem;
 }
